# salvium-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  NOTICE  README.md  app.json  asconfig.json  build-bundle.sh  debug-carrot-output.js  generate_wordlists_rs.mjs  mine-testnet.js  package.json
.githooks/: pre-commit
.github/workflows/: build-release.yml  ci.yml  release.yml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/salvium/crypto/: ExpoSalviumCryptoModule.java  ExpoSalviumCryptoPackage.java
assembly/: aes.ts  argon2d.ts  blake2b.ts  index.ts  superscalar.ts  vm.ts
cpp/: OnLoad.cpp  SalviumCryptoModule.cpp  SalviumCryptoModule.h
crates/salvium-cli/: Cargo.toml
crates/salvium-cli/src/: commands.rs  main.rs  tx_common.rs
crates/salvium-cli/src/commands/: address.rs  balance.rs  daemon.rs  history.rs  keys.rs  misc.rs  mms.rs  mod.rs  multisig.rs  notes.rs  outputs.rs  proofs.rs  rings.rs  transfers.rs  wallet_mgmt.rs
crates/salvium-consensus/: Cargo.toml
crates/salvium-consensus/src/: alt_chain.rs  block_weight.rs  chain_state.rs  lib.rs  mining.rs  oracle.rs  tree_hash.rs  validation.rs
crates/salvium-consensus/tests/: testnet_sim.rs
crates/salvium-crypto/: Cargo.toml
crates/salvium-crypto/include/: salvium_crypto.h
crates/salvium-crypto/src/: bulletproofs_plus.rs  carrot_keys.rs  carrot_scan.rs  clsag.rs  cn_scan.rs  elligator2.rs  ffi.rs  lib.rs  rct_verify.rs  storage.rs  subaddress.rs  tclsag.rs  tx_constants.rs  tx_format.rs  tx_parse.rs  tx_serialize.rs  wasm_ffi.rs  x25519.rs
crates/salvium-crypto/tests/: expand_verify.rs  wasm_tests.rs
crates/salvium-explorer/: Cargo.toml
crates/salvium-explorer/src/: lib.rs
crates/salvium-explorer/ts/: types.ts
crates/salvium-ffi/: Cargo.toml
crates/salvium-ffi/include/: salvium_wallet.h
crates/salvium-ffi/src/: daemon.rs  error.rs  handles.rs  lib.rs  multisig.rs  strings.rs  transfer.rs  wallet.rs
crates/salvium-ffi/tests/: testnet_ffi.rs  wallet_sync.rs
crates/salvium-miner/: Cargo.toml
crates/salvium-miner-gr/: Cargo.toml  build.rs
crates/salvium-miner-gr/ghostrider/: c_blake256.c  c_groestl.c  c_jh.c  c_skein.c  cryptonight.c  cryptonight.h  ghostrider_ffi.c  ghostrider_ffi.h  groestl_tables.h  keccak.c  keccak.h
crates/salvium-miner-gr/src/: engine.rs  ffi.rs  main.rs
crates/salvium-miner-v2/: Cargo.toml  build.rs
crates/salvium-miner-v2/randomx-v2/src/: argon2_core.c
crates/salvium-miner-v2/randomx-v2/src/tests/: debug_h0.cpp
crates/salvium-miner-v2/src/: engine.rs  ffi.rs  main.rs
crates/salvium-miner/src/: background.rs  daemon.rs  ipc.rs  lib.rs  main.rs  miner.rs  mining.rs  randomx.rs  stratum.rs
crates/salvium-multisig/: Cargo.toml
crates/salvium-multisig/src/: account.rs  carrot.rs  constants.rs  kex.rs  key_image.rs  lib.rs  partial_sig.rs  schnorr.rs  signed_message.rs  signer.rs  signing.rs  transport.rs  tx_builder.rs  tx_set.rs  wallet.rs  wire_format.rs
crates/salvium-multisig/tests/: multisig_integration.rs
crates/salvium-rpc/: Cargo.toml
crates/salvium-rpc/src/: client.rs  daemon.rs  error.rs  lib.rs  pool.rs  portable_storage.rs  wallet_rpc.rs
crates/salvium-rpc/tests/: testnet.rs
crates/salvium-sync-bench/: Cargo.toml
crates/salvium-sync-bench/src/: main.rs
crates/salvium-tx/: Cargo.toml
crates/salvium-tx/src/: analysis.rs  builder.rs  carrot.rs  decoy.rs  fee.rs  lib.rs  offline.rs  sign.rs  types.rs
crates/salvium-tx/tests/: mainnet_validation.rs  rct_verify_testnet.rs  testnet.rs
crates/salvium-tx/tests/common/: mod.rs
crates/salvium-types/: Cargo.toml
crates/salvium-types/src/: address.rs  base58.rs  consensus.rs  constants.rs  lib.rs  mnemonic.rs  wordlists.rs
crates/salvium-wallet/: Cargo.toml
crates/salvium-wallet/src/: account.rs  encryption.rs  error.rs  js_import.rs  keys.rs  lib.rs  pool_scan.rs  pqc.rs  query.rs  scanner.rs  stake.rs  sync.rs  token.rs  utxo.rs  wallet.rs
crates/salvium-wallet/src/device/: ledger.rs  mod.rs  trezor.rs
crates/salvium-wallet/src/mms/: message_store.rs  mod.rs  state_machine.rs  transport.rs  types.rs
crates/salvium-wallet/tests/: debug_block_parse.rs  debug_protocol_tx.rs  debug_scan.rs  full_testnet.rs  testnet_burn.rs  testnet_convert.rs  testnet_stake.rs  testnet_subaddress.rs  testnet_sync.rs  testnet_transfer.rs
docs/: explorer-spec.md  ffi-scanner.md  integration-testing.md  wallet-sync-spec.md
ios/: ExpoSalviumCrypto.podspec
native/: build-android.sh  build-ios.sh
native/cpp/: SalviumCryptoModule.cpp
scripts/: build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-wasm.sh  build-windows.sh
src/: address.js  base58.js  bulletproofs_plus.js  carrot-scanning.js  carrot.js  connection-manager.js  consensus.js  crypto-shim.js  ed25519.js  index.d.ts  index.js  keyimage.js  mining.js  multisig-carrot.js  multisig.js  offline.js  oracle.js  persistent-wallet.js  query.js  scanning.js  signature.js  subaddress.js  transaction.js  validation.js  wallet-bundle-entry.js  wallet-encryption.js  wallet-store-ffi.js  wallet-store.js  wallet-sync.js  wallet.js
test/: TESTNET_PLAN.md  address.test.js  all.js  audit-transaction.test.js  benchmark-cache.js  benchmark-crypto.js  benchmark-jit.js  benchmark-multithread.js  benchmark-simd.js  benchmark-vm.js  benchmark-wasm-argon2d.js  benchmark-wasm-superscalar.js  benchmark-workers.js  bidirectional-test.js  bulletproofs_plus.test.js  burn-in.test.js  burn-integration.test.js  burn-transaction.test.js  carrot-enote-type.test.js  carrot-self-test.js  check-cache-exports.js  check-spent.js  check-vm-internals.js  clsag-test.js  consensus-helpers.test.js  convert-transaction.test.js  crypto-cross-backend.test.js  crypto-provider.test.js  debug-aes-basic.js  debug-aes-keys.js  debug-aes4rx4.js  debug-argon2-final.js  debug-argon2-noble.js  debug-argon2.js  debug-asset-offset.js  debug-block2.js  debug-burn.js  debug-cache-only.js  debug-carrot-rcttype.js  debug-carrot-trace.js  (+92 more)
tools/: block-privacy-extract.js  stake-tracker.js
(+144 files in other folders)
