[workspace]
resolver = "2"
exclude = [
    "crates/salvium-explorer",
]
members = [
    "crates/salvium-crypto",
    "crates/salvium-miner",
    "crates/salvium-miner-v2",
    "crates/salvium-miner-gr",
    "crates/salvium-types",
    "crates/salvium-consensus",
    "crates/salvium-rpc",
    "crates/salvium-wallet",
    "crates/salvium-tx",
    "crates/salvium-cli",
    "crates/salvium-multisig",
    "crates/salvium-ffi",
    "crates/salvium-sync-bench",
]

[workspace.package]
version = "1.0.7-r015"
edition = "2021"
license = "LicenseRef-Salvium-RS"
repository = "https://github.com/salvium/salvium-rs"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
