[package]
name = "salvium-cli"
version.workspace = true
edition.workspace = true
description = "Command-line wallet for Salvium"

[[bin]]
name = "salvium-wallet-cli"
path = "src/main.rs"

[dependencies]
salvium-types = { path = "../salvium-types" }
salvium-crypto = { path = "../salvium-crypto" }
salvium-rpc = { path = "../salvium-rpc" }
salvium-wallet = { path = "../salvium-wallet" }
salvium-tx = { path = "../salvium-tx" }
salvium-multisig = { path = "../salvium-multisig" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
hex = "0.4"
log.workspace = true
env_logger.workspace = true
rpassword = "7"
rand = "0.8"
dirs = "5"
qrcode = "0.14"

[features]
default = []
transport = ["salvium-wallet/transport"]
hardware-wallet = ["salvium-wallet/hardware-wallet"]
