[package]
name = "salvium-consensus"
version.workspace = true
edition.workspace = true
description = "Blockchain validation rules, tree hash, oracle pricing, and mining utilities for Salvium"

[dependencies]
salvium-types = { path = "../salvium-types" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hex = "0.4"
