[package]
name = "salvium-crypto"
version = "0.1.0"
edition = "2021"
description = "WASM crypto primitives for salvium-js"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
blake2b_simd = "1.0"
wasm-bindgen = "0.2"
curve25519-dalek = { version = "4", features = ["alloc"] }

# Random number generation (needed for CLSAG/TCLSAG/BP+ signing)
getrandom = { version = "0.2", features = ["js"] }

# Oracle signature verification (SHA-256, ECDSA P-256, DSA)
# Only for native targets — WASM uses the JS crypto shim
sha2 = "0.10"
argon2 = "0.5"

# AES-256-GCM for wallet cache encryption
aes-gcm = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
p256 = { version = "0.13", features = ["ecdsa"] }
dsa = "0.6"
spki = "0.7"
signature = "2"
der = "0.7"

[features]
default = []
ffi = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
