[package]
name = "salvium-miner-v2"
version = "0.1.0"
edition = "2021"
description = "RandomX v2 CPU miner for Salvium cryptocurrency (experimental)"

[[bin]]
name = "salvium-miner-v2"
path = "src/main.rs"

[dependencies]
salvium-miner = { path = "../salvium-miner" }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
num_cpus = "1"
libc = "0.2"

[build-dependencies]
cc = "1"
cmake = "0.1"
