[package]
name = "salvium-miner"
version = "0.1.0"
edition = "2021"
description = "Native RandomX CPU miner for Salvium cryptocurrency"

[lib]
name = "salvium_miner"
path = "src/lib.rs"

[[bin]]
name = "salvium-miner"
path = "src/main.rs"

[dependencies]
randomx-rs = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
num_cpus = "1"
libc = "0.2"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
