[package]
name = "salvium-multisig"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
salvium-crypto = { path = "../salvium-crypto" }
curve25519-dalek = { version = "4", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"
