[package]
name = "salvium-multisig"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
salvium-crypto = { path = "../salvium-crypto" }
salvium-tx = { path = "../salvium-tx" }
salvium-types = { path = "../salvium-types" }
salvium-rpc = { path = "../salvium-rpc" }
curve25519-dalek = { version = "4", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["net", "io-util", "time", "sync", "macros", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
