[package]
name = "salvium-tx"
version.workspace = true
edition.workspace = true
description = "Transaction construction, parsing, and analysis for Salvium"

[dependencies]
salvium-types = { path = "../salvium-types" }
salvium-crypto = { path = "../salvium-crypto" }
salvium-consensus = { path = "../salvium-consensus" }
curve25519-dalek = { version = "4", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hex = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
salvium-rpc = { path = "../salvium-rpc" }
tokio = { version = "1", features = ["full"] }
