[package]
name = "salvium-types"
version.workspace = true
edition.workspace = true
description = "Core types and constants for the Salvium cryptocurrency"

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde = { version = "1", features = ["derive"] }
hex = "0.4"
thiserror = "2"
